fixed responsive issue - blog articles were not showing nice on mobile

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -8,7 +8,7 @@ $base-font-weight: 600 !default;
 $small-font-size: $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
-$spacing-unit: 30px !default;
+$spacing-unit: 2rem !default;
 
 $text-color: #111 !default;
 $background-color: #fdfdfd !default;
