--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -180,6 +180,11 @@ pre {
     padding-right: calc($spacing-unit / 2);
     padding-left: calc($spacing-unit / 2);
   }
+
+  @include media-query($on-palm) {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
 }
 
 /**
