--- a/assets/main.scss
+++ b/assets/main.scss
@@ -90,6 +90,15 @@ h1{
   grid-template-columns: repeat(auto-fit, minmax(400px, 0.5fr));
   grid-gap: 2rem;
 
+  @media screen and (max-width: 900px) {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 0.5fr));
+    grid-gap: 1rem;
+  }
+
+  @media screen and (max-width: 700px) {
+    grid-template-columns: repeat(auto-fit, minmax(100%, 0.5fr));
+  }
+
   &__post {
     width: 100%;
     background: #fff;
